NB4 added display swimmer data from HFP

--- a/nb4_repetition.ipynb
+++ b/nb4_repetition.ipynb
@@ -12,7 +12,7 @@
     "- B2.1.4 Construct and use common debugging techniques.\n",
     "\n",
     "**Reference:**\n",
-    "Head First Python (3rd Edition), Chapter 2 (pp. 84–106)\n",
+    "Head First Python (3rd Edition), Chapter 2 (pp. 84–105)\n",
     "\n",
     "---\n",
     "\n",
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "33e9e18a",
    "metadata": {},
    "outputs": [
@@ -343,6 +343,125 @@
     "for index in range(0, len(encoded_message) + 1, 2):\n",
     "    print(encoded_message[index], end=\"\")\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87a04804",
+   "metadata": {},
+   "source": [
+    "#### Challenge - Display Swimmer Data\n",
+    "\n",
+    "We are going to use code that opens a file and extracts the data from it. First, we to need to create a variable that stores the path of the file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b485007",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "swimdata/Hannah-13-100m-Back.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "filename = \"Hannah-13-100m-Back.txt\"\n",
+    "folder = \"swimdata/\"\n",
+    "filepath = folder + filename # we can join two string variables together using the plus operator\n",
+    "\n",
+    "print(filepath)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c22fa53f",
+   "metadata": {},
+   "source": [
+    "Now, we can ask Python to create a `file` object and process it for us. We will look into file processing later on in the course. For now, we are just using the code provided to us by the authors."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "908e20df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1:35.75,1:32.78,1:34.01,1:32.57\\n']\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(filepath) as file:\n",
+    "    lines = file.readlines()\n",
+    "\n",
+    "print(lines)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8deb735b",
+   "metadata": {},
+   "source": [
+    "The code gives us back a `list` of `string` values. We know how to loop through a list, so let us do that."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "d591c360",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1:35.75,1:32.78,1:34.01,1:32.57\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for line in lines:\n",
+    "    print(line)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87d15d49",
+   "metadata": {},
+   "source": [
+    "Your challenge is to write a code snippet that displays the swimmer's data neatly like so:\n",
+    "\n",
+    "```\n",
+    "---------------------------------------------------------------------------\n",
+    "Name (Age): Hannah (13)\n",
+    "Distance:   100m\n",
+    "Stroke:     Back\n",
+    "---------------------------------------------------------------------------\n",
+    "1. 1:35.75\n",
+    "2. 1:32.78\n",
+    "3. 1:34.01\n",
+    "4. 1:32.57\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e616ecb6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Write code for the challenge"
    ]
   }
  ],
