--- a/nb0_getting_started.ipynb
+++ b/nb0_getting_started.ipynb
@@ -114,7 +114,7 @@
    "id": "2f87f6ee",
    "metadata": {},
    "source": [
-    "##### 5. Lists\n",
+    "#### 5. Lists\n",
     "\n",
     "Lists are collections of values. They allow you to store multiple items under one variable name. Lists can contain numbers, strings, or even other lists! Python has become a very popular language because it has a very powerful interface for lists. There is a lot that we can do with them. For now, we will just list a few examples that you can probably understand at a glance:"
    ]
