General updates from lessons

--- a/hl_extension/adt_array.ipynb
+++ b/hl_extension/adt_array.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "aad5b518",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
     }
    ],
    "source": [
-    "# Write an algorithm that checks whether there are duplicate numbers\n",
+    "# write an algorithm that checks whether there are duplicate numbers\n",
     "for i in range(len(my_array)):\n",
     "    number = my_array[i]\n",
     "    if (my_array.count(number) > 1):\n",
