--- a/nb0_getting_started.ipynb
+++ b/nb0_getting_started.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "a3e7670c",
    "metadata": {},
    "outputs": [
@@ -92,6 +92,20 @@
     "passed_exam = True\n",
     "eligible_for_cert = passed_exam and age >= 16\n",
     "print(eligible_for_cert)  # True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6b69bcc6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# All comments in Python start with a #\n",
+    "# I am going to try and practice Boolean Values\n",
+    "\n",
+    "age = 7\n",
+    "\n"
    ]
   },
   {
@@ -151,6 +165,46 @@
     "# Removing elements\n",
     "fruits.pop()       # removes last element\n",
     "print(fruits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0b53a611",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chemistry\n",
+      "physics\n",
+      "computer science\n",
+      "computer science\n",
+      "['chemistry', 'computer science', 'physics', 'biology']\n",
+      "['chemistry', 'computer science', 'physics']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example of a list\n",
+    "subjects = [\"chemistry\", \"computer science\", \"physics\"]\n",
+    "\n",
+    "# Accessing elements\n",
+    "print(subjects[0])   # \"chemistry\"\n",
+    "print(subjects[-1])  # \"physics\"\n",
+    "\n",
+    "# two ways to get computer science\n",
+    "print(subjects[1])\n",
+    "print(subjects[-2])\n",
+    "\n",
+    "# Adding elements\n",
+    "subjects.append(\"biology\")\n",
+    "print(subjects)\n",
+    "\n",
+    "# Removing elements\n",
+    "subjects.pop()       # removes last element\n",
+    "print(subjects)"
    ]
   },
   {
