--- a/nb1_sequential_programs.ipynb
+++ b/nb1_sequential_programs.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f0201791",
    "metadata": {},
    "outputs": [],
@@ -54,29 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d6641ff7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Cell B\n",
-    "print(the_card, \"of\", the_suit)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "04774f53",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Cell C\n",
-    "the_card = random.choice(faces + numbered)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e22d8c88",
    "metadata": {},
    "outputs": [],
@@ -89,13 +67,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "id": "04774f53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cell C\n",
+    "the_card = random.choice(faces + numbered)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "8aab6921",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Cell F\n",
     "the_suit = random.choice(suits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "d6641ff7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8 of Clubs\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cell B\n",
+    "print(the_card, \"of\", the_suit)"
    ]
   },
   {
@@ -116,7 +124,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Copy over the draw() carefully from page 11"
+    "# Copy over the draw() carefully from page 11\n",
+    "def draw():\n",
+    "    the_suit = random.choice(suits)\n",
+    "    the_type = random.choice([faces,numbered])\n",
+    "    the_card = random.choice(the_type)\n",
+    "    return (the_card, \"of\", the_suit)"
    ]
   },
   {
@@ -129,18 +142,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "f9b71832",
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'Python 3.11.9' requires the ipykernel package.\n",
-      "\u001b[1;31m<a href='command:jupyter.createPythonEnvAndSelectController'>Create a Python Environment</a> with the required packages.\n",
-      "\u001b[1;31mOr install 'ipykernel' using the command: 'c:/Users/erikacamilleri/AppData/Local/Microsoft/WindowsApps/python3.11.exe -m pip install ipykernel -U --user --force-reinstall'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('King', 'of', 'Spades')\n",
+      "('Ace', 'of', 'Diamonds')\n",
+      "('Ace', 'of', 'Hearts')\n"
      ]
     }
    ],
@@ -162,12 +174,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "844c4b55",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(9, 'of', 'Hearts')\n",
+      "(3, 'of', 'Hearts')\n",
+      "(4, 'of', 'Diamonds')\n",
+      "('Ace', 'of', 'Spades')\n",
+      "('Jack', 'of', 'Hearts')\n",
+      "('Jack', 'of', 'Diamonds')\n",
+      "(5, 'of', 'Hearts')\n"
+     ]
+    }
+   ],
    "source": [
-    "for _ in range(3):\n",
+    "for _ in range(7):\n",
     "    print(draw())"
    ]
   },
@@ -183,14 +209,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "726aabb8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5, 'of', 'Green')\n",
+      "(8, 'of', 'Green')\n",
+      "Change Colour\n",
+      "(4, 'of', 'Red')\n",
+      "(9, 'of', 'Green')\n",
+      "('Skip', 'of', 'Green')\n",
+      "(2, 'of', 'Yellow')\n"
+     ]
+    }
+   ],
    "source": [
     "import random # A library is included to provide support for randomness\n",
     "\n",
-    "# TODO: Adapt the code in this notebook to write your program"
+    "# Adapt the code in this notebook to write your program\n",
+    "\n",
+    "# Let us model the UNO cards\n",
+    "wild = [\"+4\", \"Change Colour\"]\n",
+    "colours = [\"Red\", \"Blue\", \"Green\", \"Yellow\"]\n",
+    "colour_values = [1, 2, 3, 4, 5, 6, 7, 8, 9, 0, \"+2\", \"Reverse\", \"Skip\"]\n",
+    "\n",
+    "def draw():\n",
+    "    the_value = random.choice(colour_values + wild)\n",
+    "    if the_value in wild:\n",
+    "        return the_value\n",
+    "    the_colour = random.choice(colours)\n",
+    "    return (the_value, \"of\", the_colour)\n",
+    "\n",
+    "for _ in range(7):\n",
+    "    print(draw())"
    ]
   },
   {
@@ -215,7 +270,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.9"
   }
  },
