Updated notes and added challenge for hw

--- a/nb4_repetition.ipynb
+++ b/nb4_repetition.ipynb
@@ -10,6 +10,8 @@
     "**IB Computer Science Learning Outcome:** \n",
     "- B2.3.3 Construct programs that utilize looping structures to perform repeated actions\n",
     "- B2.1.4 Construct and use common debugging techniques.\n",
+    "- B2.4.2 Construct and trace algorithms to implement a linear search (partially).\n",
+    "- B2.5.1 Construct code to perform file-processing operations (partially).\n",
     "\n",
     "**Reference:**\n",
     "Head First Python (3rd Edition), Chapter 2 (pp. 84–105)\n",
@@ -220,9 +222,9 @@
    "id": "453c6286",
    "metadata": {},
    "source": [
-    "#### Activity - Search Any Record\n",
+    "#### Activity - Search Any Record (Linear Search)\n",
     "\n",
-    "Write a program that neatly extracts data for any athlete, not just Hannah, in a single cell. "
+    "Write a program that neatly extracts data for any athlete, not just Hannah, in a single cell. The program must also handle the possibility that the name may not be found.  "
    ]
   },
   {
@@ -462,6 +464,18 @@
    "outputs": [],
    "source": [
     "# TODO: Write code for the challenge"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5bdbd53b",
+   "metadata": {},
+   "source": [
+    "### Challenge — Convert the times to hundreths of seconds\n",
+    "\n",
+    "Although we recognise that the times are numerical, in reality they are still *strings* and are not suitable for further analysis.\n",
+    "\n",
+    "Write a program that reads a swimmer's file and converts every time to a single numerical value in hundreths of seconds."
    ]
   }
  ],
