Updated from lessons

--- a/nb3_strings.ipynb
+++ b/nb3_strings.ipynb
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "68780a16",
    "metadata": {},
    "outputs": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "c900abd4",
    "metadata": {},
    "outputs": [
@@ -283,12 +283,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "55ac7ac9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Darren 13 ButterFly 200m\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: Adapt the code in this notebook to write your program"
+    "# Adapt the code in this notebook to write your program\n",
+    "\n",
+    "# Step 1 - Get the filename from our real-world scenario\n",
+    "filename = \"Darren-13-ButterFly-200m.txt\"\n",
+    "\n",
+    "# Step 2 - Data cleansing\n",
+    "filename_without_extension = filename.removesuffix(\".txt\")\n",
+    "\n",
+    "# Step 3 - Split them into separate variables\n",
+    "name, age, stroke, distance = filename_without_extension.split(\"-\")\n",
+    "\n",
+    "# Step 4 - Test by printing them out\n",
+    "print(name, age, stroke, distance)\n"
    ]
   },
   {
@@ -308,7 +328,26 @@
    "execution_count": null,
    "id": "1fd1f645",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No.  Title                          Artist               Year \n",
+      "-----------------------------------------------------------------\n",
+      "01   Imagine                        John Lennon          1971 \n",
+      "02   Hey Jude                       The Beatles          1968 \n",
+      "03   Bohemian Rhapsody              Queen                1975 \n",
+      "04   Hotel California               Eagles               1976 \n",
+      "05   Smells Like Teen Spirit        Nirvana              1991 \n",
+      "06   Billie Jean                    Michael Jackson      1982 \n",
+      "07   Shape of You                   Ed Sheeran           2017 \n",
+      "08   Lose Yourself                  Eminem               2002 \n",
+      "09   Rolling in the Deep            Adele                2011 \n",
+      "10   Despacito                      Luis Fonsi           2017 \n"
+     ]
+    }
+   ],
    "source": [
     "my_music_tracks = [\n",
     "    \"01-Imagine-John_Lennon-1971.mp3\",\n",
@@ -329,8 +368,14 @@
     "\n",
     "# Looping through each track\n",
     "for my_music_track in my_music_tracks:\n",
-    "    # TODO: Use what we have learned to make this program work\n",
-    "    #       Hint: why not try replace() to remove the \"_\"?\n",
+    "    # Use what we have learned to make this program work\n",
+    "    # Hint: why not try replace() to remove the \"_\"?\n",
+    "    \n",
+    "    # remove the extension and replace underscores with spaces\n",
+    "    my_music_track_without_ext = my_music_track.removesuffix(\".mp3\").replace(\"_\", \" \")\n",
+    "\n",
+    "    # use the split function\n",
+    "    number, title, artist, year = my_music_track_without_ext.split(\"-\")\n",
     "\n",
     "    # Display the extracted data into a neat table row\n",
     "    print(f\"{number:<4} {title:<30} {artist:<20} {year:<5}\")"
@@ -445,12 +490,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "2959aa67",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Year:  2025 Month:  10 Date:  25\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: Write code for exercise 3"
+    "# TODO: Write code for exercise 3\n",
+    "date = \"25/10/2025\"\n",
+    "print(\"Year: \", date[-4:], \"Month: \", date[3:5], \"Date: \", date[0:2])"
    ]
   }
  ],
