--- a/nb4_repetition.ipynb
+++ b/nb4_repetition.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "b72055f2",
    "metadata": {},
    "outputs": [
@@ -104,8 +104,6 @@
     "\n",
     "swimdata = os.listdir(\"swimdata\")\n",
     "\n",
-    "swimdata.pop(0)\n",
-    "\n",
     "print(swimdata)"
    ]
   },
@@ -121,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "3036ecb9",
    "metadata": {},
    "outputs": [
@@ -130,7 +128,67 @@
      "output_type": "stream",
      "text": [
       "Name     Age   Distance     Stroke      \n",
-      "--------------------------------------\n"
+      "--------------------------------------\n",
+      "Abi      10    100m         Back        \n",
+      "Abi      10    100m         Breast      \n",
+      "Abi      10    50m          Back        \n",
+      "Abi      10    50m          Breast      \n",
+      "Abi      10    50m          Free        \n",
+      "Ali      12    100m         Back        \n",
+      "Ali      12    100m         Free        \n",
+      "Alison   14    100m         Breast      \n",
+      "Alison   14    100m         Free        \n",
+      "Aurora   13    50m          Free        \n",
+      "Bill     18    100m         Back        \n",
+      "Bill     18    200m         Back        \n",
+      "Blake    15    100m         Back        \n",
+      "Blake    15    100m         Fly         \n",
+      "Blake    15    100m         Free        \n",
+      "Calvin   9     50m          Back        \n",
+      "Calvin   9     50m          Fly         \n",
+      "Calvin   9     50m          Free        \n",
+      "Carl     15    100m         Back        \n",
+      "Chris    17    100m         Back        \n",
+      "Chris    17    100m         Breast      \n",
+      "Darius   13    100m         Back        \n",
+      "Darius   13    100m         Breast      \n",
+      "Darius   13    100m         Fly         \n",
+      "Darius   13    200m         IM          \n",
+      "Dave     17    100m         Free        \n",
+      "Dave     17    200m         Back        \n",
+      "Elba     14    100m         Free        \n",
+      "Emma     13    100m         Breast      \n",
+      "Emma     13    100m         Free        \n",
+      "Erika    15    100m         Breast      \n",
+      "Erika    15    100m         Free        \n",
+      "Erika    15    200m         Breast      \n",
+      "Hannah   13    100m         Back        \n",
+      "Hannah   13    100m         Free        \n",
+      "Katie    9     100m         Back        \n",
+      "Katie    9     100m         Breast      \n",
+      "Katie    9     100m         Free        \n",
+      "Katie    9     50m          Back        \n",
+      "Katie    9     50m          Breast      \n",
+      "Katie    9     50m          Fly         \n",
+      "Katie    9     50m          Free        \n",
+      "Lizzie   14    100m         Back        \n",
+      "Lizzie   14    100m         Free        \n",
+      "Maria    9     50m          Free        \n",
+      "Mike     15    100m         Back        \n",
+      "Mike     15    100m         Fly         \n",
+      "Mike     15    100m         Free        \n",
+      "Mike     15    200m         Free        \n",
+      "Mike     15    200m         IM          \n",
+      "Owen     15    100m         Free        \n",
+      "Ruth     13    100m         Back        \n",
+      "Ruth     13    100m         Free        \n",
+      "Ruth     13    200m         Back        \n",
+      "Ruth     13    200m         Free        \n",
+      "Ruth     13    400m         Free        \n",
+      "Tasmin   15    100m         Back        \n",
+      "Tasmin   15    100m         Breast      \n",
+      "Tasmin   15    100m         Free        \n",
+      "Tasmin   15    200m         Breast      \n"
      ]
     }
    ],
@@ -140,6 +198,9 @@
     "print(\"-\" * 38)\n",
     "\n",
     "# TODO: Use anything you have learned to complete the program\n",
+    "for filename in swimdata:\n",
+    "    name, age, distance, stroke = filename.replace(\".txt\", \"\").split(\"-\")\n",
+    "    print(f\"{name:<8} {age:<5} {distance:<12} {stroke:<12}\")\n",
     " "
    ]
   },
@@ -161,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "33e9e18a",
    "metadata": {},
    "outputs": [
@@ -196,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "6d3bfbde",
    "metadata": {},
    "outputs": [
@@ -218,6 +279,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2220483f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name     Age   Distance     Stroke      \n",
+      "Hannah   13    100m         Back        \n",
+      "Hannah   13    100m         Free        \n"
+     ]
+    }
+   ],
+   "source": [
+    "# playing around with the indices seems unnecesarily complicated\n",
+    "# there must be a simpler way\n",
+    "print(f\"{'Name':<8} {'Age':<5} {'Distance':<12} {'Stroke':<12}\")\n",
+    "for filename in swimdata:\n",
+    "    if \"Hannah\" in filename:\n",
+    "        swimmer = filename.removesuffix(\".txt\").split(\"-\")\n",
+    "        print(f\"{swimmer[0]:<8} {swimmer[1]:<5} {swimmer[2]:<12} {swimmer[3]:<12}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "453c6286",
    "metadata": {},
@@ -232,9 +319,31 @@
    "execution_count": null,
    "id": "084d1f14",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name     Age   Distance     Stroke      \n",
+      "-------------------------------------------------------\n",
+      "No records for  Connor have been found.\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: Write code to search any record"
+    "# Write code to search any record\n",
+    "name = input(\"Enter the name of the athlete:\")\n",
+    "found = False\n",
+    "print(f\"{'Name':<8} {'Age':<5} {'Distance':<12} {'Stroke':<12}\")\n",
+    "print(\"-------------------------------------------------------\")\n",
+    "for filename in swimdata:\n",
+    "    if name in filename:\n",
+    "        found = True\n",
+    "        swimmer = filename.removesuffix(\".txt\").split(\"-\")\n",
+    "        print(f\"{swimmer[0]:<8} {swimmer[1]:<5} {swimmer[2]:<12} {swimmer[3]:<12}\")\n",
+    "\n",
+    "if found == False:\n",
+    "    print(\"No records for \", name, \"have been found.\")"
    ]
   },
   {
@@ -270,12 +379,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "id": "43808fa9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Count is: 0\n",
+      "Count is: 1\n",
+      "Count is: 2\n",
+      "Count is: 3\n",
+      "Count is: 4\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: Fix the code"
+    "# Fix the code\n",
+    "count = 0\n",
+    "while count < 5:\n",
+    "    print(\"Count is:\", count)\n",
+    "    count = count + 1"
    ]
   },
   {
@@ -295,12 +420,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "id": "8e9a103c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1, 2, 3, 4, 5, \n",
+      "Once I caught a fish alive.\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: Fix the code"
+    "# Fix the code\n",
+    "for num in range(1, 6):\n",
+    "    print(num, end=\", \")\n",
+    "print(\"\")\n",
+    "print(\"Once I caught a fish alive.\")"
    ]
   },
   {
@@ -313,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "1071a86d",
    "metadata": {},
    "outputs": [
@@ -323,17 +461,6 @@
      "text": [
       "java--"
      ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "string index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mIndexError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[32]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      4\u001b[39m encoded_message = \u001b[33m\"\u001b[39m\u001b[33mjPaYvTaH-O-N\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m index \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[32m0\u001b[39m, \u001b[38;5;28mlen\u001b[39m(encoded_message) + \u001b[32m1\u001b[39m, \u001b[32m2\u001b[39m):\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[43mencoded_message\u001b[49m\u001b[43m[\u001b[49m\u001b[43mindex\u001b[49m\u001b[43m]\u001b[49m, end=\u001b[33m\"\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mIndexError\u001b[39m: string index out of range"
-     ]
     }
    ],
    "source": [
@@ -342,7 +469,7 @@
     "\n",
     "encoded_message = \"jPaYvTaH-O-N\"\n",
     "\n",
-    "for index in range(0, len(encoded_message) + 1, 2):\n",
+    "for index in range(0, len(encoded_message) - 1, 2):\n",
     "    print(encoded_message[index], end=\"\")\n",
     "\n"
    ]
@@ -359,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "8b485007",
    "metadata": {},
    "outputs": [
@@ -389,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "id": "908e20df",
    "metadata": {},
    "outputs": [
@@ -418,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "id": "d591c360",
    "metadata": {},
    "outputs": [
@@ -458,12 +585,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "e616ecb6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------------------------------------------------\n",
+      "Name (Age): Hannah (13)\n",
+      "Distance:  100m\n",
+      "-------------------------------------------------\n",
+      "1. 1:35.75\n",
+      "2. 1:32.78\n",
+      "3. 1:34.01\n",
+      "4. 1:32.57\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: Write code for the challenge"
+    "# Write code for the challenge\n",
+    "name, age, distance, stroke = filename.replace(\".txt\", \"\").split(\"-\")\n",
+    "print(\"-------------------------------------------------\")\n",
+    "print(\"Name (Age):\", name + \" (\" + str(age) + \")\")\n",
+    "print(\"Distance: \", distance)\n",
+    "print(\"-------------------------------------------------\")\n",
+    "\n",
+    "for line in lines:\n",
+    "    times = line.split(\",\")\n",
+    "    count = 1\n",
+    "    for time in times:\n",
+    "        print(str(count) + \".\", time)\n",
+    "        count = count + 1"
    ]
   },
   {
