--- a/nb5_lists.ipynb
+++ b/nb5_lists.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "09b89296",
    "metadata": {},
    "outputs": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "6ba003e0",
    "metadata": {},
    "outputs": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "bc8f58fc",
    "metadata": {},
    "outputs": [
@@ -351,9 +351,58 @@
    "execution_count": null,
    "id": "3944f952",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Product                                  Price  Stock \n",
+      "----------------------------------------------------------------\n",
+      "Compact Printer Air Advanced Digital     Books & Stationery USD   \n",
+      "Tablet                                   502    81    \n",
+      "Smart Blender Cooker                     Kitchen Appliances USD   \n",
+      "Advanced Router Rechargeable             121    896   \n",
+      "Portable Mouse Monitor Phone             1      925   \n",
+      "Radio                                    Skincare USD   \n"
+     ]
+    }
+   ],
    "source": [
-    "# Write code for this activity"
+    "# Write code for this activity\n",
+    "\n",
+    "import os\n",
+    "\n",
+    "products_file = \"products-100.csv\"\n",
+    "folder = \"datablist/\"\n",
+    "filepath = folder + products_file # we can join two string variables together using the plus operator\n",
+    "\n",
+    "products = [] # create a new list for our products\n",
+    "\n",
+    "try:\n",
+    "    with open(filepath) as file: # reading a file can throw an exception (run-time error)\n",
+    "        lines = file.readlines() # list of lines\n",
+    "        # the code below only makes sense if we read the file\n",
+    "        lines.pop(0) # clean up my list of lines by removing the first item\n",
+    "        products_data = lines[1:] # using slicing to get the product records only (leave the headings out)\n",
+    "        for item in products_data:\n",
+    "            product = item.strip().split(',') # strip removes white spaces\n",
+    "            products.append(product) # we have notes on append after this activity\n",
+    "            \n",
+    "except: # except is short for exception\n",
+    "    print(\"We could not open your file:\", filepath) # when the error occurs our program can handle it a bit nicely\n",
+    "\n",
+    "# to display product data - check that products is not empty\n",
+    "if len(products) > 0:\n",
+    "    print(f\"{'Product':<40} {'Price':<6} {'Stock':<6}\")\n",
+    "    print(\"----------------------------------------------------------------\")\n",
+    "    first_five = products[:6]\n",
+    "    for p in first_five:\n",
+    "        product_desc = p[1]\n",
+    "        price = p[5]\n",
+    "        stock = p[7]\n",
+    "        print(f\"{product_desc:<40} {price:<6} {stock:<6}\")\n",
+    "\n",
+    "# the data in the file is unclean so finishing the activity was not possible"
    ]
   },
   {
@@ -377,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "76eca9ca",
    "metadata": {},
    "outputs": [
@@ -387,23 +436,52 @@
        "['1:35.75,1:32.78,1:34.01,1:32.57\\n']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "filename = \"Hannah-13-100m-Back.txt\"\n",
+    "folder = \"swimdata/\"\n",
+    "filepath = folder + filename # we can join two string variables together using the plus operator\n",
+    "\n",
+    "with open(filepath) as file:\n",
+    "    lines = file.readlines() # list of lines\n",
+    "\n",
     "lines # Here is the list of lines we are working with"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "0edde4ab",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1:35.75', '1:32.78', '1:34.01', '1:32.57']\n",
+      "[9575, 9278, 9401, 9257]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write code for the activity"
+    "# Write code for the activity\n",
+    "times = []\n",
+    "\n",
+    "process_times = lines[0].strip().split(',')\n",
+    "\n",
+    "print(process_times)\n",
+    "\n",
+    "for convert in process_times:\n",
+    "    minutes, rest = convert.split(\":\")\n",
+    "    seconds, hundreths = rest.split(\".\")\n",
+    "    converted = (int(minutes) * 60 * 100) + (int(seconds) * 100) + int((hundreths))\n",
+    "    times.append(converted)\n",
+    "\n",
+    "print(times)"
    ]
   },
   {
@@ -548,9 +626,22 @@
    "execution_count": null,
    "id": "922ac4fa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9257, 9278, 9401, 9575]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write code for the activity"
+    "# Write code for the activity\n",
+    "\n",
+    "# We already stored the converted times in a list in the previous activity\n",
+    "\n",
+    "times.sort()\n",
+    "print(times)"
    ]
   },
   {
